--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="cabecalho">
-        <h1 class="titulo">Clone Clone-Yu-Gi-Oh</h1>
+        <h1 class="titulo">Projeto Clone-Yu-Gi-Oh</h1>
     </header>
     <main class="slider">
         <button class="btn-seta btn-voltar" id="btn-voltar">
